refactor notes collection to list model
- auto save list model when collection changes
- view of note shows closed status
- toggle closed button triggers save to list

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,6 +59,18 @@
 	margin: 0;
 }
 
+#notes .note .open-note {
+	display: none;
+}
+
 #notes .note.closed {
 	color: #27666D;
+}
+
+#notes .note.closed .close-note {
+	display: none;
+}
+
+#notes .note.closed .open-note {
+	display: inline-block;
 }
