--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,11 @@
 	z-index: 1020;
 }
 
+#node-notes .navbar-inner {
+	border-top-left-radius: 6px;
+	border-top-right-radius: 6px;
+}
+
 #navigation > .dropdown {
 	display: inline-block;
 }
